--- a/HW02/HW02-1.ipynb
+++ b/HW02/HW02-1.ipynb
@@ -326,26 +326,42 @@
         "import torch\n",
         "import torch.nn as nn\n",
         "\n",
-        "class Classifier(nn.Module):\n",
+        "class ClassifierWithBN(nn.Module):\n",
         "    def __init__(self):\n",
-        "        super(Classifier, self).__init__()\n",
+        "        super(ClassifierWithBN, self).__init__()\n",
+        "        # 定义线性层\n",
         "        self.layer1 = nn.Linear(429, 1024)\n",
         "        self.layer2 = nn.Linear(1024, 512)\n",
         "        self.layer3 = nn.Linear(512, 128)\n",
         "        self.out = nn.Linear(128, 39)\n",
         "\n",
+        "        # 定义批次归一化层\n",
+        "        # nn.BatchNorm1d 的参数是它接收的输入的特征维度\n",
+        "        self.bn1 = nn.BatchNorm1d(1024)\n",
+        "        self.bn2 = nn.BatchNorm1d(512)\n",
+        "        self.bn3 = nn.BatchNorm1d(128)\n",
+        "\n",
+        "        # 定义激活函数\n",
         "        self.act_fn = nn.Sigmoid()\n",
         "\n",
         "    def forward(self, x):\n",
+        "        # 第 1 层\n",
         "        x = self.layer1(x)\n",
+        "        x = self.bn1(x)  # 在激活函数前进行批次归一化\n",
         "        x = self.act_fn(x)\n",
         "\n",
+        "        # 第 2 层\n",
         "        x = self.layer2(x)\n",
+        "        x = self.bn2(x)  # 在激活函数前进行批次归一化\n",
         "        x = self.act_fn(x)\n",
         "\n",
+        "        # 第 3 层\n",
         "        x = self.layer3(x)\n",
+        "        x = self.bn3(x)  # 在激活函数前进行批次归一化\n",
         "        x = self.act_fn(x)\n",
         "\n",
+        "        # 输出层\n",
+        "        # 通常不在输出层之后加BN\n",
         "        x = self.out(x)\n",
         "\n",
         "        return x"
